Fixed some errors

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>
-            Kena website!
+            Kena website
         </h1>
         <hr/>
         <h4>
@@ -19,7 +19,7 @@
                 Avengers
             </li>
             <li>
-                Gemina 
+                Gemina Man
             </li>
         </ol>
     </body>
